<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.calculadoraareas.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/darkcyan"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="5dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pratica"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/cero"
            android:id="@+id/nota1"
            android:textColor="@color/black"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avance"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:inputType="numberDecimal"
            android:layout_margin="7dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/nota2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/avance2"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:id="@+id/nota3"
            android:inputType="numberDecimal"
            android:layout_margin="7dp"
            android:textColor="@color/black"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avance3"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:id="@+id/nota4"
            android:inputType="numberDecimal"
            android:layout_margin="7dp"
            android:textColor="@color/black"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appfinal"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:id="@+id/nota5"
            android:textColor="@color/black"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_margin="7dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res"
            android:background="@color/green"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/calcular"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/resultado"
            android:layout_margin="7dp"
            />
    </LinearLayout>

</LinearLayout>
